--- a/contato.html
+++ b/contato.html
@@ -6,15 +6,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="images/logo.png" alt="Logo SECAF" class="logo">
+  <header><img src="images/logo.png" alt="Logo SECAF" class="logo">
+    <nav>
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="servicos.html">Serviços</a>
+      <a href="contato.html">Contato</a>
+    </nav>
   </header>
   <main>
-    <h1>Contato</h1>
-    <p>Entre em contato conosco pelo e-mail: contato@secaf.com.br ou pelo telefone: (00) 0000-0000.</p>
+    <h1>Entre em Contato</h1>
+    <p>Telefone: (00) 00000-0000</p>
+    <p>WhatsApp: (00) 90000-0000</p>
+    <p>E-mail: contato@secaf.com.br</p>
+    <p>Endereço: Rua Exemplo, 123 - Cidade/UF</p>
   </main>
-  <footer>
-    <p>&copy; 2025 SECAF - Todos os direitos reservados.</p>
-  </footer>
+  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
 </body>
 </html>
