--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>SECAF - Consultoria Agrícola</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Logo SECAF" class="logo">
+    <img src="images/logo.png" alt="Logo SECAF" class="logo" />
     <nav>
       <a href="index.html">Início</a>
       <a href="sobre.html">Sobre</a>
@@ -15,18 +15,10 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <section class="banner">
-    <img src="images/banner.jpg" alt="Banner da SECAF">
-    <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
-  </section>
   <main>
-    <section>
-      <h2>Sobre a SECAF</h2>
-      <p>A SECAF atua com responsabilidade social oferecendo serviços de assessoria técnica rural, projetos de crédito fundiário e muito mais.</p>
-    </section>
+    <div class="banner">
+      <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
+    </div>
   </main>
-  <footer>
-    <p>&copy; 2025 SECAF - Todos os direitos reservados.</p>
-  </footer>
 </body>
 </html>
