--- a/servicos.html
+++ b/servicos.html
@@ -6,22 +6,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="images/logo.png" alt="Logo SECAF" class="logo">
+  <header><img src="images/logo.png" alt="Logo SECAF" class="logo">
+    <nav>
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="servicos.html">Serviços</a>
+      <a href="contato.html">Contato</a>
+    </nav>
   </header>
   <main>
     <h1>Serviços Prestados</h1>
-    <button onclick="location.href='credito-fundiario.html'">Crédito Fundiário</button>
-    <button onclick="location.href='credito-rural.html'">Crédito Rural</button>
-    <button onclick="location.href='irrigacao.html'">Irrigação</button>
-    <button onclick="location.href='laudos.html'">Laudos</button>
-    <button onclick="location.href='projetos-prefeitura.html'">Projetos Prefeitura</button>
-    <button onclick="location.href='recuperacao.html'">Recuperação de Áreas</button>
-    <button onclick="location.href='piqueteamento.html'">Piqueteamento</button>
-    <button onclick="location.href='servicos-prestados.html'">Serviços Já Prestados</button>
+    <ul>
+      <li>Crédito Fundiário</li>
+      <li>Crédito Rural</li>
+      <li>Irrigação</li>
+      <li>Laudos</li>
+      <li>Projetos Prefeitura</li>
+      <li>Recuperação de Áreas</li>
+      <li>Piqueteamento</li>
+      <li>Serviços Já Prestados</li>
+    </ul>
   </main>
-  <footer>
-    <p>&copy; 2025 SECAF - Todos os direitos reservados.</p>
-  </footer>
+  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
 </body>
 </html>
