--- a/sobre.html
+++ b/sobre.html
@@ -6,16 +6,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="images/logo.png" alt="Logo SECAF" class="logo">
+  <header><img src="images/logo.png" alt="Logo SECAF" class="logo">
+    <nav>
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="servicos.html">Serviços</a>
+      <a href="contato.html">Contato</a>
+    </nav>
   </header>
   <main>
-    <h1>Quem Somos</h1>
-    <p>Somos uma equipe comprometida com o desenvolvimento sustentável do meio rural.</p>
-    <img src="images/equipe.jpg" alt="Equipe SECAF" class="equipe-img">
+    <h1>Sobre a SECAF</h1>
+    <p>A SECAF nasceu com a missão de levar conhecimento técnico e soluções práticas para a Agricultura Familiar. Atuamos em diversas áreas como crédito rural, projetos técnicos, irrigação, entre outros.</p>
+    <p>Missão: Promover o desenvolvimento sustentável no campo.</p>
+    <p>Visão: Ser referência em assessoria rural no Brasil.</p>
+    <p>Valores: Compromisso, ética, inovação e respeito ao produtor.</p>
   </main>
-  <footer>
-    <p>&copy; 2025 SECAF - Todos os direitos reservados.</p>
-  </footer>
+  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
 </body>
 </html>
