Subir site completo com páginas index, sobre, contato e serviços

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>SECAF - Consultoria Agrícola</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>SECAF - Início</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="images/logo.png" alt="Logo SECAF" class="logo" />
+  <header><img src="images/logo.png" alt="Logo SECAF" class="logo">
     <nav>
       <a href="index.html">Início</a>
       <a href="sobre.html">Sobre</a>
@@ -16,9 +15,10 @@
     </nav>
   </header>
   <main>
-    <div class="banner">
-      <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
-    </div>
+    <h1>Bem-vindo à SECAF</h1>
+    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
+    <p><a href="servicos.html">Conheça nossos serviços</a></p>
   </main>
+  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
 </body>
 </html>
