Estilo dos botões da página serviços corrigido

--- a/servicos.html
+++ b/servicos.html
@@ -15,17 +15,17 @@
     </nav>
   </header>
   <main>
-    <h1>Serviços Prestados</h1>
-    <ul>
-      <li>Crédito Fundiário</li>
-      <li>Crédito Rural</li>
-      <li>Irrigação</li>
-      <li>Laudos</li>
-      <li>Projetos Prefeitura</li>
-      <li>Recuperação de Áreas</li>
-      <li>Piqueteamento</li>
-      <li>Serviços Já Prestados</li>
-    </ul>
+     <h1>Serviços Prestados</h1>
+  <div class="nav-servicos">
+    <button onclick="location.href='credito-fundiario.html'">Crédito Fundiário</button>
+    <button onclick="location.href='credito-rural.html'">Crédito Rural</button>
+    <button onclick="location.href='irrigacao.html'">Irrigação</button>
+    <button onclick="location.href='laudos.html'">Laudos</button>
+    <button onclick="location.href='projetos-prefeitura.html'">Projetos Prefeitura</button>
+    <button onclick="location.href='recuperacao.html'">Recuperação de Áreas</button>
+    <button onclick="location.href='piqueteamento.html'">Piqueteamento</button>
+    <button onclick="location.href='servicos-prestados.html'">Serviços Já Prestados</button>
+  </div>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
 </body>
