Adicionar botão de Chamamento Público na página de serviços

--- a/servicos.html
+++ b/servicos.html
@@ -25,6 +25,7 @@
     <button onclick="location.href='recuperacao.html'">Recuperação de Áreas</button>
     <button onclick="location.href='piqueteamento.html'">Piqueteamento</button>
     <button onclick="location.href='servicos-prestados.html'">Serviços Já Prestados</button>
+    <button onclick="location.href='seguros-agricolas.html'">Seguros Agrícolas</button>
   </div>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
