--- a/servicos.html
+++ b/servicos.html
@@ -1,33 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Serviços - SECAF</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Serviços - SECAF</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header><img src="images/logo.png" alt="Logo SECAF" class="logo">
+<header>
+    <img src="images/logo.png" alt="Logo SECAF" class="logo">
     <nav>
-      <a href="index.html">Início</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="servicos.html">Serviços</a>
-      <a href="contato.html">Contato</a>
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="servicos.html">Serviços</a>
+        <a href="contato.html">Contato</a>
     </nav>
-  </header>
-  <main>
-     <h1>Serviços Prestados</h1>
-  <div class="nav-servicos">
-    <button onclick="location.href='credito-fundiario.html'">Crédito Fundiário</button>
-    <button onclick="location.href='credito-rural.html'">Crédito Rural</button>
-    <button onclick="location.href='irrigacao.html'">Irrigação</button>
-    <button onclick="location.href='laudos.html'">Laudos</button>
-    <button onclick="location.href='projetos-prefeitura.html'">Projetos Prefeitura</button>
-    <button onclick="location.href='recuperacao.html'">Recuperação de Áreas</button>
-    <button onclick="location.href='piqueteamento.html'">Piqueteamento</button>
-    <button onclick="location.href='servicos-prestados.html'">Serviços Já Prestados</button>
-    <button onclick="location.href='seguros-agricolas.html'">Seguros Agrícolas</button>
-  </div>
-  </main>
-  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
+</header>
+<main>
+    <h1>Serviços Prestados</h1>
+    <div class="botoes-servicos">
+        <a href="credito-fundiario.html"><button>Crédito Fundiário</button></a>
+        <a href="credito-rural.html"><button>Crédito Rural</button></a>
+        <a href="irrigacao.html"><button>Irrigação</button></a>
+        <a href="laudos.html"><button>Laudos</button></a>
+        <a href="projetos-prefeitura.html"><button>Projetos Prefeitura</button></a>
+        <a href="recuperacao.html"><button>Recuperação de Áreas</button></a>
+        <a href="piqueteamento.html"><button>Piqueteamento</button></a>
+        <a href="seguros-agricolas.html"><button>Seguros Agrícolas</button></a>
+        <a href="servicos-prestados.html"><button>Serviços Já Prestados</button></a>
+    </div>
+</main>
+<footer>
+    <p>&copy; 2025 SECAF - Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
