--- a/servicos.html
+++ b/servicos.html
@@ -28,7 +28,7 @@
         <a href="piqueteamento.html"><button>Piqueteamento</button></a>
         <a href="seguros-agricolas.html"><button>Seguros Agrícolas</button></a>
         <a href="servicos-prestados.html"><button>Serviços Já Prestados</button></a>
-        
+        <a href="certificados.html"><button>Certificados e Reconhecimentos</button></a>
     </div>
 </main>
 <footer>
