Corrigir caminho da imagem do botão do WhatsApp e atualizar arquivos modificados

--- a/projetos-prefeitura.html
+++ b/projetos-prefeitura.html
@@ -65,5 +65,10 @@
   <footer>
     © 2025 SECAF - Todos os direitos reservados.
   </footer>
+  <!-- Botão flutuante do WhatsApp -->
+<a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
+   class="whatsapp-float" target="_blank">
+  <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" style="width:60px; height:60px;">
+</a>
 </body>
 </html>
