Atualizar páginas HTML e CSS com botão flutuante do Instagram e novo ícone

--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <h1>Sobre a SECAF</h1>
     <p>A SECAF nasceu com a missão de levar conhecimento técnico e soluções práticas para a Agricultura Familiar. Atuamos em diversas áreas como crédito rural, projetos técnicos, irrigação, entre outros.</p>
     <p>Missão: Promover o desenvolvimento sustentável no campo.</p>
-    <p>Visão: Ser referência em assessoria rural no Brasil.</p>
+    <p>Visão: Ser referência em assessoria rural para agricultura familiar no Brasil.</p>
     <p>Valores: Compromisso, ética, inovação e respeito ao produtor.</p>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
