--- a/servicos.html
+++ b/servicos.html
@@ -38,6 +38,9 @@
 <a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
    class="whatsapp-float" target="_blank">
   <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" style="width:60px; height:60px;">
+</a><!-- Botão flutuante do Instagram -->
+<a href="https://www.instagram.com/SEUUSUARIO" class="instagram-float" target="_blank">
+  <img src="images/instagram.png" alt="Nosso Instagram" style="width: 60px; height: 60px;">
 </a>
 </body>
 </html>
