--- a/recuperacao.html
+++ b/recuperacao.html
@@ -82,6 +82,14 @@
 </a><!-- Botão flutuante do Instagram -->
 <a href="https://www.instagram.com/SEUUSUARIO" class="instagram-float" target="_blank">
   <img src="images/instagram.png" alt="Nosso Instagram" style="width: 60px; height: 60px;">
-</a>
+</a><!-- Ícones flutuantes das redes sociais -->
+<div class="social-float">
+  <a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
+    <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" class="icon-social">
+  </a>
+  <a href="https://www.instagram.com/SEUUSUARIO" target="_blank">
+    <img src="images/instagram.png" alt="Nosso Instagram" class="icon-social">
+  </a>
+</div>
 </body>
 </html>
