--- a/sobre.html
+++ b/sobre.html
@@ -22,5 +22,14 @@
     <p>Valores: Compromisso, ética, inovação e respeito ao produtor.</p>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
+  <!-- Ícones flutuantes das redes sociais -->
+<div class="social-float">
+  <a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
+    <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" class="icon-social">
+  </a>
+  <a href="https://www.instagram.com/SEUUSUARIO" target="_blank">
+    <img src="images/instagram.png" alt="Nosso Instagram" class="icon-social">
+  </a>
+</div>
 </body>
 </html>
