Adicionar banner com pôr do sol e frase principal na página inicial

--- a/index.html
+++ b/index.html
@@ -36,5 +36,11 @@
     <img src="images/instagram.png" alt="Nosso Instagram" class="icon-social">
   </a>
 </div>
+<section class="hero-banner">
+  <img src="images/por-do-sol.png" alt="Pôr do Sol" class="banner-img">
+  <div class="banner-texto">
+    <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
+  </div>
+</section>
 </body>
 </html>
