Adicionar banner com imagem e frase no topo da página inicial

--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
       <a href="contato.html">Contato</a>
     </nav>
   </header>
-  <main>
-    <h1>Bem-vindo à SECAF</h1>
-    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
-    <p><a href="servicos.html">Conheça nossos serviços</a></p>
-  </main>
+ <section class="hero-banner">
+  <img src="images/por-do-sol.png" alt="Pôr do Sol" class="banner-img">
+  <div class="banner-texto">
+    <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
+  </div>
+</section>
+
+<main>
+  <h1>Bem-vindo à SECAF</h1>
+  <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
+  <p><a href="servicos.html">Conheça nossos serviços</a></p>
+</main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
   <!-- Botão flutuante do WhatsApp -->
 <a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
