Atualizar informações de contato: e-mail, telefone e endereço

--- a/contato.html
+++ b/contato.html
@@ -31,10 +31,12 @@
   <button type="submit">Enviar</button>
 </form>
     <h1>Entre em Contato</h1>
-    <p>Telefone: (00) 99615-0440</p>
-    <p>WhatsApp: (00) 90000-0000</p>
-    <p>E-mail: contato@secaf.com.br</p>
-    <p>Endereço: Rua Exemplo, 123 - Cidade/UF</p>
+    <p>Telefone: (67) 99913-7089</p>
+    <p>WhatsApp: (67) 99615-0411</p>
+    <p>E-mail: andersonsouzasecaf@gmail.com</p>
+    <p>E-mail: hawlysonac@gmail.com</p>
+    <p>Endereço: Rua pedro Rigotti, 930 - Dourados / MS</p>
+    <p>Cep: 79.810-120</p>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
   <!-- Botão flutuante do WhatsApp -->
