--- a/contato.html
+++ b/contato.html
@@ -35,7 +35,7 @@
     <p>WhatsApp: (67) 99615-0411</p>
     <p>E-mail: andersonsouzasecaf@gmail.com</p>
     <p>E-mail: hawlysonac@gmail.com</p>
-    <p>Endereço: Rua pedro Rigotti, 930 - Dourados / MS</p>
+    <p>Endereço: Rua Pedro Rigotti, 930 - Dourados / MS</p>
     <p>Cep: 79.810-120</p>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
@@ -48,7 +48,7 @@
   <img src="images/instagram.png" alt="Nosso Instagram" style="width: 60px; height: 60px;">
 </a><!-- Ícones flutuantes das redes sociais -->
 <div class="social-float">
-  <a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
+  <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
     <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" class="icon-social">
   </a>
   <a href="https://www.instagram.com/SEUUSUARIO" target="_blank">
