--- a/sobre.html
+++ b/sobre.html
@@ -24,7 +24,7 @@
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
   <!-- Ícones flutuantes das redes sociais -->
 <div class="social-float">
-  <a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
+  <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
     <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" class="icon-social">
   </a>
   <a href="https://www.instagram.com/SEUUSUARIO" target="_blank">
