--- a/index.html
+++ b/index.html
@@ -56,21 +56,12 @@
 </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
   <!-- Botão flutuante do WhatsApp -->
-<a href="https://wa.me/55SEUNUMERO?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
+<a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
    class="whatsapp-float" target="_blank">
   <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" style="width:60px; height:60px;">
 </a><!-- Botão flutuante do Instagram -->
 <a href="https://www.instagram.com/SEUUSUARIO" class="instagram-float" target="_blank">
   <img src="images/instagram.png" alt="Nosso Instagram" style="width: 60px; height: 60px;">
-</a><!-- Ícones flutuantes das redes sociais -->
-<div class="social-float">
-  <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF" target="_blank">
-    <img src="images/whatsapp.png" alt="Fale conosco no WhatsApp" class="icon-social">
-  </a>
-  <a href="https://www.instagram.com/SEUUSUARIO" target="_blank">
-    <img src="images/instagram.png" alt="Nosso Instagram" class="icon-social">
-  </a>
-</div>
 </section>
 <script>
   // Adiciona a data atual em tempo real no formato: Terça-feira, 14 de Maio de 2025
