Conteúdo expandido na página Sobre a SECAF

--- a/sobre.html
+++ b/sobre.html
@@ -16,10 +16,41 @@
   </header>
   <main>
     <h1>Sobre a SECAF</h1>
-    <p>A SECAF nasceu com a missão de levar conhecimento técnico e soluções práticas para a Agricultura Familiar. Atuamos em diversas áreas como crédito rural, projetos técnicos, irrigação, entre outros.</p>
-    <p>Missão: Promover o desenvolvimento sustentável no campo.</p>
-    <p>Visão: Ser referência em assessoria rural para agricultura familiar no Brasil.</p>
-    <p>Valores: Compromisso, ética, inovação e respeito ao produtor.</p>
+
+<p>A SECAF (Serviços de Consultoria e Assessoria para Agricultura Familiar) nasceu em 2017, fruto do sonho de engenheiros e técnicos apaixonados pelo campo e comprometidos com o desenvolvimento sustentável da agricultura familiar no Brasil. Com sede em Dourados-MS, a empresa surgiu a partir da necessidade real de levar orientação técnica, planejamento e soluções viáveis para pequenos e médios produtores rurais.</p>
+
+<p>Ao longo dos anos, a SECAF construiu uma trajetória marcada pela seriedade, responsabilidade e resultados concretos. Nossa equipe multidisciplinar atua com ética e compromisso em todas as fases do desenvolvimento rural, desde o diagnóstico da propriedade até a implantação de projetos financiados por programas públicos e privados.</p>
+
+<h2>Nossa História</h2>
+
+<p>Iniciamos com projetos de crédito fundiário e assistência técnica em assentamentos rurais da região sul-mato-grossense. Rapidamente ganhamos notoriedade pela forma personalizada de atender cada produtor, respeitando sua realidade e potencial. Com isso, expandimos nossas atividades para áreas como:</p>
+
+<ul>
+  <li>Elaboração de projetos técnicos de irrigação e conservação de solo;</li>
+  <li>Vistorias e laudos periciais agrícolas;</li>
+  <li>Regularização ambiental rural e emissão de CAR e CCIR;</li>
+  <li>Análise e interpretação de solo e planos de recuperação de áreas degradadas;</li>
+  <li>Consultoria para Prefeituras em editais, convênios e licitações no setor agro;</li>
+  <li>Elaboração de projetos para obtenção de crédito rural (Pronaf, Pronamp, Moderfrota, etc.);</li>
+  <li>Seguros agrícolas e gestão de riscos no campo.</li>
+</ul>
+
+<h2>Nossa Missão</h2>
+<p>Promover o desenvolvimento sustentável da agricultura familiar com soluções acessíveis, inovadoras e adaptadas à realidade de cada produtor rural.</p>
+
+<h2>Nossa Visão</h2>
+<p>Ser referência nacional em consultoria rural, reconhecida pela excelência técnica, proximidade com o produtor e impacto positivo no campo.</p>
+
+<h2>Nossos Valores</h2>
+<ul>
+  <li>Compromisso com o produtor rural</li>
+  <li>Ética e transparência</li>
+  <li>Inovação com responsabilidade</li>
+  <li>Valorização da agricultura familiar</li>
+  <li>Respeito ao meio ambiente e às tradições do campo</li>
+</ul>
+
+<p>Mais do que uma empresa de consultoria, a SECAF é parceira do homem e da mulher do campo, ajudando a transformar sonhos em projetos concretos e colheitas em progresso. Caminhamos lado a lado com quem produz com suor, fé e dedicação. Porque acreditamos que o futuro do Brasil começa com quem planta e cuida da terra.</p>
   </main>
   <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
   <!-- Ícones flutuantes das redes sociais -->
