Rodapé institucional completo com assinatura de Renato Ferreira da Cruz

--- a/index.html
+++ b/index.html
@@ -77,6 +77,39 @@
   const dataFormatada = `${diaSemana}, ${dia} de ${mes} de ${ano}`;
   document.getElementById('data-atual').textContent = dataFormatada;
 </script>
+<footer class="rodape">
+  <div class="rodape-container">
+    
+    <div class="rodape-coluna">
+      <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
+      <p>Consultoria e Assessoria para Agricultura Familiar. Atuando com seriedade, inovação e compromisso no campo desde 2017.</p>
+    </div>
+
+    <div class="rodape-coluna">
+      <h4>Links úteis</h4>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </div>
+
+    <div class="rodape-coluna">
+      <h4>Contato</h4>
+      <p><strong>WhatsApp:</strong> (67) 9 9999-9999</p>
+      <p><strong>Email:</strong> contato@secaf.com.br</p>
+      <p><strong>Endereço:</strong> Dourados - MS</p>
+    </div>
+
+  </div>
+
+  <div class="rodape-baixo">
+    <p>© 2025 SECAF - Todos os direitos reservados.</p>
+    <p>"Juntos pelo campo, com responsabilidade e paixão pela terra."</p>
+    <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
+  </div>
+</footer>
 
 </body>
 
