--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
   <main>
     <h1>Sobre a SECAF</h1>
 
-<p>A SECAF (Serviços de Consultoria e Assessoria para Agricultura Familiar) nasceu em 2017, fruto do sonho de engenheiros e técnicos apaixonados pelo campo e comprometidos com o desenvolvimento sustentável da agricultura familiar no Brasil. Com sede em Dourados-MS, a empresa surgiu a partir da necessidade real de levar orientação técnica, planejamento e soluções viáveis para pequenos e médios produtores rurais.</p>
+<p>A SECAF (Serviços de Consultoria e Assessoria para Agricultura Familiar) nasceu em 2007, fruto do sonho de três engenheiros apaixonados pelo campo e comprometidos com o desenvolvimento sustentável da agricultura familiar no Brasil. Com sede em Dourados-MS, a empresa surgiu a partir da necessidade real de levar orientação técnica, planejamento e soluções viáveis para pequenos e médios produtores rurais.</p>
 
 <p>Ao longo dos anos, a SECAF construiu uma trajetória marcada pela seriedade, responsabilidade e resultados concretos. Nossa equipe multidisciplinar atua com ética e compromisso em todas as fases do desenvolvimento rural, desde o diagnóstico da propriedade até a implantação de projetos financiados por programas públicos e privados.</p>
 
