Rodapé institucional completo com assinatura de Renato Ferreira da Cruz

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 
   const dataFormatada = `${diaSemana}, ${dia} de ${mes} de ${ano}`;
   document.getElementById('data-atual').textContent = dataFormatada;
-</script>
-<footer class="rodape">
+</script><footer class="rodape">
   <div class="rodape-container">
     
     <div class="rodape-coluna">
@@ -109,7 +108,7 @@
     <p>"Juntos pelo campo, com responsabilidade e paixão pela terra."</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
   </div>
-</footer>
+  </footer>
 
 </body>
 
