Fixado elementos do rodapé e corrigido flutuação da logo e frase

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   const dataFormatada = `${diaSemana}, ${dia} de ${mes} de ${ano}`;
   document.getElementById('data-atual').textContent = dataFormatada;
-</script><footer class="rodape">
+</script>
   <div class="rodape-container">
     
     <div class="rodape-coluna">
