Fixado elementos do rodapé e corrigido flutuação da logo e frase

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
   <p><a href="servicos.html">Conheça nossos serviços</a></p>
 </main>
-  <footer>© 2025 SECAF - Todos os direitos reservados.</footer>
+  <footer>© 2025 SECAF - Todos os direitos reservados.
   <!-- Botão flutuante do WhatsApp -->
 <a href="https://wa.me/5567996150411?text=Olá!%20Gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20SECAF." 
    class="whatsapp-float" target="_blank">
@@ -81,7 +81,6 @@
     
     <div class="rodape-coluna">
       <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
-      <p>Consultoria e Assessoria para Agricultura Familiar. Atuando com seriedade, inovação e compromisso no campo desde 2017.</p>
     </div>
 
     <div class="rodape-coluna">
@@ -96,8 +95,8 @@
 
     <div class="rodape-coluna">
       <h4>Contato</h4>
-      <p><strong>WhatsApp:</strong> (67) 9 9999-9999</p>
-      <p><strong>Email:</strong> contato@secaf.com.br</p>
+      <p><strong>WhatsApp:</strong> (67) 9 9615-0411</p>
+      <p><strong>Email:</strong>  hawlysonac@gmail.comr</p>
       <p><strong>Endereço:</strong> Dourados - MS</p>
     </div>
 
