--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
     <p>"Juntos pelo campo, com responsabilidade e paixão pela terra."</p>
     <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
   </div>
+  <div class="rodape-logos">
+  <img src="images/logo-crea.png" alt="CREA-MS">
+  <img src="images/logo-anater.png" alt="ANATER">
+  <img src="images/logo-secaf.png" alt="SECAF">
+</div>
   </footer>
 
 </body>
