--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,7 +8,90 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-  <!-- conteúdo anterior omitido para brevidade -->
+  <header>
+    <img src="images/logo.png" alt="Logo SECAF" class="logo">
+    <nav>
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="servicos.html">Serviços</a>
+      <a href="contato.html">Contato</a>
+    </nav>
+  </header>
+
+  <div class="barra-topo">
+    <div class="data-atual" id="data-atual"></div>
+  </div>
+
+  <section class="hero-banner">
+    <img src="images/por-do-sol.png" alt="Pôr do Sol" class="banner-img">
+    <div class="banner-texto">
+      <h1>Consultoria e Assessoria para Agricultura Familiar</h1>
+    </div>
+  </section>
+
+  <!-- NOVO BLOCO INFORMATIVO -->
+  <section class="info-agro-clima">
+    <div class="coluna-esquerda">
+      <h2>Preços Atualizados</h2>
+      <table class="tabela-precos">
+        <tr><td><strong>Dólar:</strong></td><td>R$ 5,63</td></tr>
+        <tr><td><strong>Soja:</strong></td><td>R$ 140,50</td></tr>
+        <tr><td><strong>Milho:</strong></td><td>R$ 82,30</td></tr>
+        <tr><td><strong>Boi Gordo:</strong></td><td>R$ 238,75</td></tr>
+        <tr><td><strong>Ovos:</strong></td><td>R$ 16,90 (30 unid)</td></tr>
+        <tr><td><strong>Frango:</strong></td><td>R$ 8,20/kg</td></tr>
+        <tr><td><strong>Verduras:</strong></td><td>R$ 3,50</td></tr>
+        <tr><td><strong>Leite:</strong></td><td>R$ 3,90/L</td></tr>
+      </table>
+    </div>
+
+    <div class="coluna-direita">
+      <h2>Clima Atual e Previsão</h2>
+      <div id="clima-info">Carregando clima...</div>
+      <div>
+        <img id="mapa-clima" src="https://www.climatempo.com.br/dist/images/climatempo-og.jpg" alt="Mapa do Clima" style="width: 100%; max-width: 300px; margin-top: 10px;">
+      </div>
+    </div>
+  </section>
+
+  <main>
+    <h1>Bem-vindo à SECAF</h1>
+    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
+    <p><a href="servicos.html">Conheça nossos serviços</a></p>
+  </main>
+
+  <footer class="rodape">
+    <div class="rodape-container">
+      <div class="rodape-coluna">
+        <img src="images/logo.png" alt="Logo SECAF" class="rodape-logo">
+      </div>
+      <div class="rodape-coluna">
+        <h4>Links úteis</h4>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="servicos.html">Serviços</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </div>
+      <div class="rodape-coluna">
+        <h4>Contato</h4>
+        <p><strong>WhatsApp:</strong> (67) 9 9615-0411</p>
+        <p><strong>Email:</strong> hawlysonac@gmail.com</p>
+        <p><strong>Endereço:</strong> Dourados - MS</p>
+      </div>
+    </div>
+    <div class="rodape-baixo">
+      <p>© 2025 SECAF - Todos os direitos reservados.</p>
+      <p>"Juntos pelo campo, com responsabilidade e paixão pela terra."</p>
+      <p class="creditos-site">Site desenvolvido por <strong>Renato Ferreira da Cruz</strong></p>
+    </div>
+    <div class="rodape-logos">
+      <img src="images/logo-crea.png" alt="CREA-MS">
+      <img src="images/logo-anater.png" alt="ANATER">
+      <img src="images/logo-secaf.png" alt="SECAF">
+    </div>
+  </footer>
 
   <script>
     const diasSemana = ["Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira", "Quinta-feira", "Sexta-feira", "Sábado"];
