Organiza layout: saudação após banner + clima e preços abaixo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     </div>
   </section>
 
-  <!-- NOVO BLOCO INFORMATIVO -->
+  <section class="boas-vindas">
+    <h1>Bem-vindo à SECAF</h1>
+    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
+    <a href="servicos.html">Conheça nossos serviços</a>
+  </section>
+
   <section class="info-agro-clima">
     <div class="coluna-esquerda">
       <h2>Preços Atualizados</h2>
@@ -53,12 +58,6 @@
       </div>
     </div>
   </section>
-
-  <main>
-    <h1>Bem-vindo à SECAF</h1>
-    <p>Somos especialistas em Consultoria e Assessoria para Agricultura Familiar. Aqui você encontra soluções técnicas e estratégicas para o campo.</p>
-    <p><a href="servicos.html">Conheça nossos serviços</a></p>
-  </main>
 
   <footer class="rodape">
     <div class="rodape-container">
