Atualiza exibição do clima na página inicial

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <h2>Clima Atual e Previsão</h2>
       <div id="clima-info">Carregando clima...</div>
       <div>
-        <img id="mapa-clima" src="https://www.climatempo.com.br/dist/images/climatempo-og.jpg" alt="Mapa do Clima" style="width: 100%; max-width: 300px; margin-top: 10px;">
+        <img id="mapa-clima" src="https://www.climatempo.com.br/previsao-do-tempo/cidade/213/dourados-ms" alt="Mapa do Clima" style="width: 100%; max-width: 300px; margin-top: 10px;">
       </div>
     </div>
   </section>
